[project]
name = "metric3d"
version = "0.1.0"
description = "Metric3D package"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
  "datetime>=5.5",
  "html4vision>=0.5.0",
  "imagecorruptions>=1.1.2",
  "imgaug>=0.4.0",
  "iopath>=0.1.10",
  "matplotlib>=3.10.3",
  "mmcv>=2.2.0",
  "numpy>=2.3.0",
  "opencv-python>=4.11.0.86",
  "pillow>=11.2.1",
  "plyfile>=1.1.2",
  "tensorboardx>=2.6.4",
  "timm>=1.0.15",
  "torch==2.5.1",
  "torchvision==0.20.1",
  "xformers==0.0.29",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mono"]
